--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,12 @@ services:
     ports:
       - "5433:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - ./postgres-data:/var/lib/postgresql/data
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   app:
     build:
@@ -21,17 +26,15 @@ services:
     ports:
       - "8080:8080"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/postgres
-      - SPRING_DATASOURCE_USERNAME=postgres
-      - SPRING_DATASOURCE_PASSWORD=postgres
+      - SPRING_R2DBC_URL=r2dbc:postgresql://db:5432/postgres
+      - SPRING_R2DBC_USERNAME=postgres
+      - SPRING_R2DBC_PASSWORD=postgres
+      - SPRING_LIQUIBASE_URL=jdbc:postgresql://db:5432/postgres
+      - SPRING_LIQUIBASE_USER=postgres
+      - SPRING_LIQUIBASE_PASSWORD=postgres
       - IMAGES_DIR=/app/uploaded-images
     volumes:
-      - uploaded_images:/app/uploaded-images
-
-volumes:
-  postgres_data:
-    driver: local
-  uploaded_images:
-    driver: local
+      - ./uploaded-images:/app/uploaded-images
