--- a/client-service/Dockerfile
+++ b/client-service/Dockerfile
@@ -5,18 +5,17 @@ COPY . .
 RUN mvn clean package -DskipTests
 
 
-
 FROM openjdk:21-jdk-slim
 
-COPY --from=builder /app/target/*-SNAPSHOT.jar /app/intershop.jar
-COPY uploaded-images /app/uploaded-images
+COPY --from=builder /app/client-service/target/*-SNAPSHOT.jar /app/client-service.jar
+COPY ./client-service/uploaded-images /app/uploaded-images
 
 EXPOSE 8080
 
-RUN chmod 777 /app/intershop.jar
+RUN chmod 777 /app/client-service.jar
 
 ENV IMAGES_DIR=/app/uploaded-images
 
 VOLUME ["/app/uploaded-images"]
 
-ENTRYPOINT ["/app/intershop.jar"]
+ENTRYPOINT ["/app/client-service.jar"]
