--- a/client-service/src/main/resources/application.yaml
+++ b/client-service/src/main/resources/application.yaml
@@ -19,6 +19,20 @@ spring:
     hiddenmethod:
       filter:
         enabled: true
+  security:
+    oauth2:
+      client:
+        provider:
+          keycloak:
+            issuer-uri: http://${KEYCLOAK_SERVICE_NAME:localhost:8090}/realms/master
+        registration:
+          intershop-service:
+            provider: keycloak
+            authorizationGrantType: client_credentials
+            client-id: intershop-service
+            client-secret: sEoY6QTWf0XA9JWXU5LxBHy1zjc3U1vt
+            scope: profile
+            clientAuthenticationMethod: client_secret_post
   thymeleaf:
     encoding: UTF-8
   data:
