--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,6 +31,27 @@ services:
       timeout: 5s
       retries: 5
 
+  keycloak:
+    image: quay.io/keycloak/keycloak:26.1.3
+    container_name: keycloak
+    volumes:
+      - ./keycloak/realm-export.json:/opt/keycloak/data/import/realm-export.json
+    environment:
+      KC_HTTP_PORT: 8090
+      KC_BOOTSTRAP_ADMIN_USERNAME: admin
+      KC_BOOTSTRAP_ADMIN_PASSWORD: admin
+    command:
+      - start-dev
+      - --import-realm
+      - --health-enabled=true
+    ports:
+      - "8090:8090"
+    healthcheck:
+      test: ['CMD-SHELL', '[ -f /tmp/HealthCheck.java ] || echo "public class HealthCheck { public static void main(String[] args) throws java.lang.Throwable { System.exit(java.net.HttpURLConnection.HTTP_OK == ((java.net.HttpURLConnection)new java.net.URL(args[0]).openConnection()).getResponseCode() ? 0 : 1); } }" > /tmp/HealthCheck.java && java /tmp/HealthCheck.java http://localhost:9000/health/live']
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
   client-service:
     build:
       context: .
@@ -43,6 +64,8 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+      keycloak:
+        condition: service_healthy
     environment:
       - SPRING_R2DBC_URL=r2dbc:postgresql://db:5432/postgres
       - SPRING_R2DBC_USERNAME=postgres
@@ -53,6 +76,7 @@ services:
       - IMAGES_DIR=/app/uploaded-images
       - SPRING_DATA_REDIS_HOST=redis
       - API_CLIENT_PAYMENT_SERVICE_URL=http://payment-service:8082
+      - KEYCLOAK_SERVICE_NAME=keycloak:8090
     volumes:
       - ./client-service/uploaded-images:/app/uploaded-images
 
@@ -63,8 +87,10 @@ services:
     container_name: payment-service
     ports:
       - "8082:8082"
+    environment:
+      - KEYCLOAK_SERVICE_NAME=keycloak:8090
     depends_on:
       db:
         condition: service_healthy
-      redis:
+      keycloak:
         condition: service_healthy
