--- a/payment-service/src/main/resources/application.yaml
+++ b/payment-service/src/main/resources/application.yaml
@@ -1,6 +1,11 @@
 spring:
   application:
     name: payment-service
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://${KEYCLOAK_SERVICE_NAME:localhost:8090}/realms/master
 
 server:
   port: 8082
