--- a/client-service/pom.xml
+++ b/client-service/pom.xml
@@ -109,6 +109,12 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.dasniko</groupId>
+            <artifactId>testcontainers-keycloak</artifactId>
+            <version>3.6.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -157,6 +163,29 @@
                                 <openApiNullable>false</openApiNullable>
                                 <typeMapping>number=BigDecimal</typeMapping>
                             </configOptions>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-external-keycloak-realm</id>
+                        <phase>process-test-resources</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.testOutputDirectory}/keycloak</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>${project.basedir}/../keycloak</directory>
+                                    <includes>
+                                        <include>realm-export.json</include>
+                                    </includes>
+                                </resource>
+                            </resources>
                         </configuration>
                     </execution>
                 </executions>
